--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
       - main
 
 pool:
-  vmImage: 'windows-latest'
+  name: Azure Pipelines
 
 steps:
   - task: microsoft-IsvExpTools.PowerPlatform-BuildTools.tool-installer.PowerPlatformToolInstaller@2
